Use java.nio instead of java.io